fix notifications endpoints and initiate renew subscription feature